--- a/DOCA_FILE-list.html
+++ b/DOCA_FILE-list.html
@@ -85,168 +85,168 @@
                     <tr>
                         <td>1</td>
                         <td rowspan="24">마이워크스페이스</td>
-                        <td><a href="page/MWS_MANAGEMENT_01.html">MWS_MANAGEMENT_01.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_01.html">MWS_MANAGEMENT_01.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td><a href="page/MWS_MANAGEMENT_02.html">MWS_MANAGEMENT_02.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_02.html">MWS_MANAGEMENT_02.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>3</td>
-                        <td><a href="page/MWS_MANAGEMENT_03.html">MWS_MANAGEMENT_03.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_03.html">MWS_MANAGEMENT_03.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td><a href="page/MWS_MANAGEMENT_04.html">MWS_MANAGEMENT_04.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_04.html">MWS_MANAGEMENT_04.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>5</td>
-                        <td><a href="page/MWS_MANAGEMENT_05.html">MWS_MANAGEMENT_05.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_05.html">MWS_MANAGEMENT_05.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>6</td>
-                        <td><a href="page/MWS_MANAGEMENT_06.html">MWS_MANAGEMENT_06.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_06.html">MWS_MANAGEMENT_06.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>7</td>
-                        <td><a href="page/MWS_MANAGEMENT_07.html">MWS_MANAGEMENT_07.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_07.html">MWS_MANAGEMENT_07.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>8</td>
-                        <td><a href="page/MWS_MANAGEMENT_08.html">MWS_MANAGEMENT_08.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_08.html">MWS_MANAGEMENT_08.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>9</td>
-                        <td><a href="page/MWS_MANAGEMENT_09.html">MWS_MANAGEMENT_09.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_09.html">MWS_MANAGEMENT_09.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>10</td>
-                        <td><a href="page/MWS_MANAGEMENT_10.html">MWS_MANAGEMENT_10.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_10.html">MWS_MANAGEMENT_10.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>11</td>
-                        <td><a href="page/MWS_MANAGEMENT_11.html">MWS_MANAGEMENT_11.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_11.html">MWS_MANAGEMENT_11.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>12</td>
-                        <td><a href="page/MWS_MANAGEMENT_12.html">MWS_MANAGEMENT_12.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_12.html">MWS_MANAGEMENT_12.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>13</td>
-                        <td><a href="page/MWS_MANAGEMENT_13.html">MWS_MANAGEMENT_13.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_13.html">MWS_MANAGEMENT_13.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>14</td>
-                        <td><a href="page/MWS_MANAGEMENT_14.html">MWS_MANAGEMENT_14.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_14.html">MWS_MANAGEMENT_14.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>15</td>
-                        <td><a href="page/MWS_MANAGEMENT_15.html">MWS_MANAGEMENT_15.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_15.html">MWS_MANAGEMENT_15.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>16</td>
-                        <td><a href="page/MWS_MANAGEMENT_16.html">MWS_MANAGEMENT_16.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_16.html">MWS_MANAGEMENT_16.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>17</td>
-                        <td><a href="page/MWS_MANAGEMENT_17.html">MWS_MANAGEMENT_17.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_17.html">MWS_MANAGEMENT_17.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>18</td>
-                        <td><a href="page/MWS_MANAGEMENT_18.html">MWS_MANAGEMENT_18.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_18.html">MWS_MANAGEMENT_18.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>19</td>
-                        <td><a href="page/MWS_MANAGEMENT_19.html">MWS_MANAGEMENT_19.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_19.html">MWS_MANAGEMENT_19.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>20</td>
-                        <td><a href="page/MWS_MANAGEMENT_20.html">MWS_MANAGEMENT_20.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_20.html">MWS_MANAGEMENT_20.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>21</td>
-                        <td><a href="page/MWS_MANAGEMENT_21.html">MWS_MANAGEMENT_21.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_21.html">MWS_MANAGEMENT_21.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>22</td>
-                        <td><a href="page/MWS_MANAGEMENT_22.html">MWS_MANAGEMENT_22.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_22.html">MWS_MANAGEMENT_22.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>23</td>
-                        <td><a href="page/MWS_MANAGEMENT_23.html">MWS_MANAGEMENT_23.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_23.html">MWS_MANAGEMENT_23.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
                     </tr>
                     <tr>
                         <td>24</td>
-                        <td><a href="page/MWS_MANAGEMENT_24.html">MWS_MANAGEMENT_24.html</a></td>
+                        <td><a href="pages/MWS_MANAGEMENT_24.html">MWS_MANAGEMENT_24.html</a></td>
                         <td></td>
                         <td>-</td>
                         <td><input class="form-check-input" name="workcheck" type="checkbox" value=""></td>
