--- a/DOCA_FILE-list.html
+++ b/DOCA_FILE-list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="kr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,12 +12,12 @@
     <!-- Fevicon -->
     <link rel="shortcut icon" href="assets/images/favicon.ico">
     <!-- plugin css -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <style>
-        #userListTable {
-        }
+        #userListTable {}
 
-        #userListTable thead{
+        #userListTable thead {
             position: sticky;
             top: 0px;
             background-color: #888;
@@ -24,6 +25,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container pt-5">
         <h1>DOCA 퍼블리싱 사이트맵</h1>
@@ -37,8 +39,9 @@
             <div class="complete-percent my-3">
                 <label class="mb-2">Perfection:</label>
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
+                    <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0"
+                        aria-valuemax="100"></div>
+                </div>
             </div>
         </div>
         <div class="table-add mb-5">
@@ -257,35 +260,36 @@
     </div>
     <footer class="footer mt-auto py-3 bg-light">
         <div class="container text-center">
-          <span class="text-muted">@2022 bubblecon</span>
+            <span class="text-muted">@2022 bubblecon</span>
         </div>
-      </footer>
+    </footer>
 
     <!-- Start js -->
     <script src="assets/js/common/jquery.min.js"></script>
     <script src="assets/js/plugins/jquery-ui/jquery-ui.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-    // on page load...
-    moveProgressBar();
-    $('input:checkbox[name="workcheck"]').click(moveProgressBar);
+        // on page load...
+        moveProgressBar();
+        $('input:checkbox[name="workcheck"]').click(moveProgressBar);
 
-    function moveProgressBar() {
-        var checkList = $('input:checkbox[name="workcheck"]').length;
-        var isCheck = $('input:checkbox[name="workcheck"]:checked').length;
-        //테이블 체크상태
+        function moveProgressBar() {
+            var checkList = $('input:checkbox[name="workcheck"]').length;
+            var isCheck = $('input:checkbox[name="workcheck"]:checked').length;
+            //테이블 체크상태
 
-        var valuenow = Math.floor(isCheck/checkList * 100);
+            var valuenow = Math.floor(isCheck / checkList * 100);
 
-        var progress = $('.progress');
-        var progressBar = $('.progress-bar');
-        var getPercent = valuenow + "%";
-        progressBar.css("width", getPercent);
-        progressBar.text(getPercent);
-    }
+            var progress = $('.progress');
+            var progressBar = $('.progress-bar');
+            var getPercent = valuenow + "%";
+            progressBar.css("width", getPercent);
+            progressBar.text(getPercent);
+        }
 
     </script>
 
 
 </body>
+
 </html>
